small adjustments to footer

--- a/index.html
+++ b/index.html
@@ -104,8 +104,11 @@
 
 </body>
 
-  <footer>Andres Aguaiza 2019<a href="https://github.com/andresagu"><img class = "gitlogo" src="pics/logo.png" alt="github"></a></footer>
-
+<footer>
+  <a href="https://github.com/andresagu"><img class = "gitlogo" src="pics/logo.png" alt="github"></a>
+  <br>
+  Andres Aguaiza 2019
+</footer>
 
 
 </html>
