--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,9 @@
     <table >
         <tr class = "menuBar">
             <td class = "nameBar">Andres Aguaiza</td>
-            <td><a href="https://andresagu.github.io/index.html" target = "blank">About</a></td>
-            <td><a href="https://andresagu.github.io/portfolio.html" target="blank">Portfolio</a></td>
-            <td><a href="https://andresagu.github.io/contact.html" target = "blank">Contact</a></td>
+            <td><a href="https://andresagu.github.io/index.html">About</a></td>
+            <td><a href="https://andresagu.github.io/portfolio.html">Portfolio</a></td>
+            <td><a href="https://andresagu.github.io/contact.html">Contact</a></td>
         </tr>
     </table>
   </div>
