adding different placeholding text

--- a/index.html
+++ b/index.html
@@ -28,72 +28,19 @@
     <img class="myPic" src="pics/me.JPG" alt="image not found">
 
     <p>
-      I can see it in your eyes, you're angry Regret got shit on what you're feeling no Mad 'cause he ain't like me Oh you mad 'cause nobody ever did it like me All the care I would take, all the love that we made Now you're trying to find somebody
-      to replace what I gave to you
+      The blue whale (Balaenoptera musculus) is a marine mammal belonging to the baleen whale parvorder, Mysticeti.[6] At up to 29.9 metres (98 ft)[7] in length and with a maximum recorded weight of 173 tonnes (190 short tons),[7] it is the largest animal known to have ever existed.[8][9]
     </p>
 
     <p>
-      It's a shame you didn't keep it, Alicia, Katia
-      I know that you gon' hear this, I'm the man
-      Yeah I said it, bitch I'm the man
-      Don't you forget it
-      The way you walk, that's me...
-      The way you talk, that's me...
-      The way you've got your hair up, did you forget that's me?...
-      And the voice in your speaker right now, that's me...
-      And the voice in your ear, that's me
-      Can't you see that I made it? Yeah I made it
-      First I made you who you are, then I made it
-      And you're wasted with your ladies
-      Yeah I'm the reason why you always getting faded
+      Long and slender, the blue whale's body can be various shades of bluish-grey dorsally and somewhat lighter underneath.[10] There are at least three distinct subspecies: B. m. musculus of the North Atlantic and North Pacific, B. m. intermedia of the Southern Ocean and B. m. brevicauda (also known as the pygmy blue whale) found in the Indian Ocean and South Pacific Ocean. B. m. indica, found in the Indian Ocean, may be another subspecies. As with other baleen whales, its diet consists almost exclusively of small crustaceans known as krill
     </p>
 
     <p>
-      Take a shot for me, ooh
-      Take a shot for me, ooh
-      Take a shot for me
-      A shot for me
-      A shot for me
+      Blue whales were abundant in nearly all the oceans on Earth until the beginning of the twentieth century. For over a century, they were hunted almost to extinction by whalers until protected by the international community in 1966. A 2002 report estimated there were 5,000 to 12,000 blue whales worldwide,[7] in at least five populations. The IUCN estimates that there are probably between 10,000 and 25,000 blue whales worldwide today.[5] Before whaling, the largest population was in the Antarctic, numbering approximately 239,000 (range 202,000 to 311,000).[12] There remain only much smaller (around 2,000) concentrations in each of the eastern North Pacific, Antarctic, and Indian Ocean populations. There are two more groups in the North Atlantic, and at least two in the Southern Hemisphere. The Eastern North Pacific blue whale population had rebounded by 2014 to nearly its pre-hunting population
     </p>
 
     <p>
-      Okay look, I'm honest
-      Girl I can't lie, I miss you
-      You and the music were the only things that I commit to
-      I never cheated, for the record, back when I was with you
-      But you believe in everything but me girl, I don't get you
-      She says I know you changed, I never see you
-      'Cause you're always busy doing things
-    </p>
-
-    <p>
-      I really wish she had a different way of viewing things
-      I think the city that we're from just kinda ruined things
-      It's such a small place, not much to do but talk and listen
-      The men are jealous and the women all in competition
-      And now your friends telling you stories that you often misinterpret
-      And taint all the images of your "Mr. Perfect"
-    </p>
-
-    <p>
-      I could tell that you been crying all night, drinking all summer
-      Praying for your happiness, hope that you recover
-      This is one I know you hated when you heard it
-      And it's worse because you know that I deserve it
-    </p>
-
-    <p>
-      Take a shot for me, ooh
-      Take a shot for me, ooh
-      Take a shot for me
-      A shot for me
-      A shot for me
-    </p>
-
-    <p>
-      May your neighbors respect you
-      Trouble neglect you, angels protect you
-      And heaven accept you
+      Mating starts in late autumn and continues to the end of winter.[64] Little is known about mating behaviour or breeding grounds. In the fall, males will follow females for prolonged periods of time. Occasionally, a second male will attempt to displace the first, and the whales will race each other at high speed, ranging from 17 miles per hour (27 km/h) to 20 miles per hour (32 km/h) in New Zealand. This often causes the racing whales to breach, which is rare in blue whales. This racing behavior may even escalate to physical violence between the males. Scientists have observed this behavior in multiple parts of the world, including the Gulf of St. Lawrence in Canada and the South Taranaki Bight in New Zealand
     </p>
 
   </div>
