updated mobile compatibility

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Student Bio</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles/indexStyle.css">
@@ -19,6 +20,26 @@
     </tr>
   </table>
 </div>
+
+<!--HEADER FORMAT TO USE WHEN USING SMALLER SCREEN SIZED (>768px)  -->
+
+<div class="blockForTableMobile">
+  <table>
+    <tr class="menuBar">
+      <td class="nameBar">Andres Aguaiza</td>
+    </tr>
+    <tr class="menuBar">
+      <td><a href="https://andresagu.github.io/index.html">About</a></td>
+    </tr>
+    <tr class="menuBar">
+      <td><a href="https://andresagu.github.io/portfolio.html" >Portfolio</a></td>
+    </tr>
+    <tr class="menuBar">
+      <td><a href="https://andresagu.github.io/contact.html">Contact</a></td>
+    </tr>
+  </table>
+</div>
+
 
 <body>
   <hr>
@@ -50,6 +71,40 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
+
+<!--BIO LAYOUT ADJUSTMENTS FOR SMALLER SCREEN SIZES -->
+
+<div class="enclosureMobile">
+  <br>
+  <h1 class="subPageHeader">About Me </h1>
+
+  <div class="picHolder">
+  <img class="mobilePic" src="pics/me.JPG" alt="image not found">
+</div>
+
+  <br>
+
+  <p>
+    The blue whale (Balaenoptera musculus) is a marine mammal belonging to the baleen whale parvorder, Mysticeti.[6] At up to 29.9 metres (98 ft)[7] in length and with a maximum recorded weight of 173 tonnes (190 short tons),[7] it is the largest animal known to have ever existed.[8][9]
+  </p>
+
+  <p>
+    Long and slender, the blue whale's body can be various shades of bluish-grey dorsally and somewhat lighter underneath.[10] There are at least three distinct subspecies: B. m. musculus of the North Atlantic and North Pacific, B. m. intermedia of the Southern Ocean and B. m. brevicauda (also known as the pygmy blue whale) found in the Indian Ocean and South Pacific Ocean. B. m. indica, found in the Indian Ocean, may be another subspecies. As with other baleen whales, its diet consists almost exclusively of small crustaceans known as krill
+  </p>
+
+  <p>
+    Blue whales were abundant in nearly all the oceans on Earth until the beginning of the twentieth century. For over a century, they were hunted almost to extinction by whalers until protected by the international community in 1966. A 2002 report estimated there were 5,000 to 12,000 blue whales worldwide,[7] in at least five populations. The IUCN estimates that there are probably between 10,000 and 25,000 blue whales worldwide today.[5] Before whaling, the largest population was in the Antarctic, numbering approximately 239,000 (range 202,000 to 311,000).[12] There remain only much smaller (around 2,000) concentrations in each of the eastern North Pacific, Antarctic, and Indian Ocean populations. There are two more groups in the North Atlantic, and at least two in the Southern Hemisphere. The Eastern North Pacific blue whale population had rebounded by 2014 to nearly its pre-hunting population
+  </p>
+
+  <p>
+    Mating starts in late autumn and continues to the end of winter.[64] Little is known about mating behaviour or breeding grounds. In the fall, males will follow females for prolonged periods of time. Occasionally, a second male will attempt to displace the first, and the whales will race each other at high speed, ranging from 17 miles per hour (27 km/h) to 20 miles per hour (32 km/h) in New Zealand. This often causes the racing whales to breach, which is rare in blue whales. This racing behavior may even escalate to physical violence between the males. Scientists have observed this behavior in multiple parts of the world, including the Gulf of St. Lawrence in Canada and the South Taranaki Bight in New Zealand
+  </p>
+
+</div>
+
+
+
+
 
 <footer>
   <a href="https://github.com/andresagu"><img class = "gitlogo" src="pics/logo.png" alt="github"></a>
