added some mobile compatability

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,27 @@
         </tr>
     </table>
   </div>
+
+  <!--HEADER FORMAT TO USE WHEN USING SMALLER SCREEN SIZED (>768px)  -->
+
+  <div class="blockForTableMobile">
+    <table>
+      <tr class="menuBar">
+        <td class="nameBar">Andres Aguaiza</td>
+      </tr>
+      <tr class="menuBar">
+        <td><a href="https://andresagu.github.io/index.html">About</a></td>
+      </tr>
+      <tr class="menuBar">
+        <td><a href="https://andresagu.github.io/portfolio.html" >Portfolio</a></td>
+      </tr>
+      <tr class="menuBar">
+        <td><a href="https://andresagu.github.io/contact.html">Contact</a></td>
+      </tr>
+    </table>
+  </div>
+
+
     <body>
       <hr>
       <div class = "enclosure">
@@ -39,7 +60,24 @@
         </form>
       </div>
 
-<!--  -->
+<!--MOBILE ENCLOSURE  -->
+<div class = "enclosureMobile">
+  <br>
+  <h1 class = "subPageHeader">Contact</h1>
+  <form>
+      Name:<br>
+      <input class = "textInput" type="text" name="name">
+      <br>
+      Email:<br>
+      <input class = "textInput" type="text" name="email">
+      <br>
+      Message<br>
+      <input class = "messageInput" type="text" name="message">
+      <br>
+      <br>
+      <input type="submit" value="submit">
+  </form>
+</div>
 
     </body>
 
